force-app/main/default/objects/Account/fields/AMC_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>AMC_Membership_ID__c</fullName>
    <externalId>true</externalId>
    <label>AMC/HMC Membership ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>