force-app/main/default/objects/Account/fields/AMCAvailablePoint__c.field-meta.xml
<CustomField>
    <fullName>AMCAvailablePoint__c</fullName>
    <label>AMC/HMC Available Point</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>