force-app/main/default/objects/Account/fields/AMCTotalPoint__c.field-meta.xml
<CustomField>
    <fullName>AMCTotalPoint__c</fullName>
    <label>Total AMC/HMC Points</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>