force-app/main/default/objects/Account/fields/Batch_Upload__c.field-meta.xml
<CustomField>
    <fullName>Batch_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Upload</label>
    <type>Checkbox</type>
</CustomField>