force-app/main/default/objects/Account/fields/CRMREID__c.field-meta.xml
<CustomField>
    <fullName>CRMREID__c</fullName>
    <externalId>true</externalId>
    <label>CRM RE ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>