force-app/main/default/objects/Account/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>DOB/Register Date</label>
    <type>Date</type>
</CustomField>