force-app/main/default/objects/Account/fields/DoForgetMe__c.field-meta.xml
<CustomField>
    <fullName>DoForgetMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoForgetMe</label>
    <type>Checkbox</type>
</CustomField>