force-app/main/default/objects/Account/fields/DoNotMarket__c.field-meta.xml
<CustomField>
    <fullName>DoNotMarket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotMarket</label>
    <type>Checkbox</type>
</CustomField>