force-app/main/default/objects/Account/fields/DoNotProcess__c.field-meta.xml
<CustomField>
    <fullName>DoNotProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotProcess</label>
    <type>Checkbox</type>
</CustomField>