force-app/main/default/objects/Account/fields/DoNotProfile__c.field-meta.xml
<CustomField>
    <fullName>DoNotProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotProfile</label>
    <type>Checkbox</type>
</CustomField>