force-app/main/default/objects/Account/fields/DoNotTrack__c.field-meta.xml
<CustomField>
    <fullName>DoNotTrack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DoNotTrack</label>
    <type>Checkbox</type>
</CustomField>