force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>