force-app/main/default/objects/Account/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <description>Integration message from CRM RE</description>
    <label>Integration Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>