force-app/main/default/objects/Account/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>