force-app/main/default/objects/Account/fields/IsAMC__c.field-meta.xml
<CustomField>
    <fullName>IsAMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAMC/HMC</label>
    <type>Checkbox</type>
</CustomField>