force-app/main/default/objects/Account/fields/LatestSummaryDate__c.field-meta.xml
<CustomField>
    <fullName>LatestSummaryDate__c</fullName>
    <label>LatestSummaryDate</label>
    <type>Date</type>
</CustomField>