force-app/main/default/objects/Account/fields/LINE_ID__c.field-meta.xml
<CustomField>
    <fullName>LINE_ID__c</fullName>
    <label>LINE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>