force-app/main/default/objects/Account/fields/Passport_ID__c.field-meta.xml
<CustomField>
    <fullName>Passport_ID__c</fullName>
    <label>Passport ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>