force-app/main/default/objects/Account/fields/Personal_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Identification_Number__c</fullName>
    <label>ID Card/Taxpayer ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>