force-app/main/default/objects/Account/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Mid Management</fullName>
            </value>
            <value>
                <fullName>Top Management</fullName>
            </value>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Other &amp; Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>