force-app/main/default/objects/Account/fields/Preferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Country__c</fullName>
    <defaultValue>&#39;Thailand&#39;</defaultValue>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>