force-app/main/default/objects/Account/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <inlineHelpText>Example : jakeperalta@gmail.com</inlineHelpText>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>