force-app/main/default/objects/Account/fields/Preferred_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Mobile_No__c</fullName>
    <inlineHelpText>Example : +66876478600</inlineHelpText>
    <label>Preferred Mobile No.</label>
    <type>Phone</type>
</CustomField>