force-app/main/default/objects/Account/fields/ReadytoBook__c.field-meta.xml
<CustomField>
    <fullName>ReadytoBook__c</fullName>
    <formula>NOT(ISBLANK(CRMREID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM-RE Ready</label>
    <type>Checkbox</type>
</CustomField>