force-app/main/default/objects/Account/fields/Specific_Position__c.field-meta.xml
<CustomField>
    <fullName>Specific_Position__c</fullName>
    <label>Specific Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>