force-app/main/default/objects/Account/fields/Temp_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Temp_Home_Phone__c</fullName>
    <label>Temp Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>