force-app/main/default/objects/Account/fields/Temp_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Temp_Lead_Email__c</fullName>
    <label>Temp Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>