force-app/main/default/objects/Account/fields/Temp_Lead_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Temp_Lead_Mobile__c</fullName>
    <label>Temp Mobile No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>