force-app/main/default/objects/Account/fields/Temp_Lead_RegChannel__c.field-meta.xml
<CustomField>
    <fullName>Temp_Lead_RegChannel__c</fullName>
    <label>Registration Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registration_Channel</valueSetName>
    </valueSet>
</CustomField>