force-app/main/default/objects/Account/fields/Temp_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Temp_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>