force-app/main/default/objects/Account/fields/WeChat_ID__c.field-meta.xml
<CustomField>
    <fullName>WeChat_ID__c</fullName>
    <label>WeChat ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>