force-app/main/default/objects/Account/recordTypes/Edit_Corporate_Account.recordType-meta.xml
<RecordType>
    <fullName>Edit_Corporate_Account</fullName>
    <active>true</active>
    <label>Corporate Account</label>
</RecordType>