force-app/main/default/objects/Account/recordTypes/New_Corporate_Account.recordType-meta.xml
<RecordType>
    <fullName>New_Corporate_Account</fullName>
    <active>true</active>
    <label>New Corporate Account</label>
</RecordType>