force-app/main/default/objects/Account/validationRules/Corporate_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Corporate_Account</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name &lt;&gt; &#39;System Administrator&#39;
&amp;&amp; (RecordType.DeveloperName = &#39;New_Corporate_Account&#39; 
||RecordType.DeveloperName = &#39;Edit_Corporate_Account&#39;)
&amp;&amp;
(ISBLANK(Preferred_Email__c) 
&amp;&amp; ISBLANK(Preferred_Mobile_No__c) 
&amp;&amp; ISBLANK(Temp_Lead_Email__c) 
&amp;&amp; ISBLANK(Temp_Lead_Mobile__c) 
)</errorConditionFormula>
    <errorMessage>These required fields must be completed: Preferred Mobile No. or Preferred Email</errorMessage>
</ValidationRule>