force-app/main/default/objects/Account/validationRules/Individual_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Individual_Account</fullName>
    <active>true</active>
    <description>Not check system admin because it come from CRM RE integration</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &#39;System Administrator&#39;
&amp;&amp;
(RecordType.DeveloperName  = &#39;Edit_Person_Account&#39;
|| RecordType.DeveloperName  = &#39;New_Person_Account&#39;)

&amp;&amp; 
(
(ISBLANK(FirstName) &amp;&amp; ISBLANK(LastName))
||
(ISBLANK(Preferred_Email__c) 
&amp;&amp; ISBLANK(Preferred_Mobile_No__c) 
&amp;&amp; ISBLANK(Temp_Lead_Email__c) 
&amp;&amp; ISBLANK(Temp_Lead_Mobile__c)
)
)</errorConditionFormula>
    <errorMessage>These required fields must be completed: First Name, Last Name, Preferred Mobile No. or Preferred Email</errorMessage>
</ValidationRule>