force-app/main/default/objects/Account/validationRules/Only_number_for_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_number_for_phone</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Preferred_Mobile_No__c)
&amp;&amp; !REGEX(Preferred_Mobile_No__c, &quot;[0-9]{9,10}&quot;)
&amp;&amp; !REGEX(Preferred_Mobile_No__c, &quot;\\+[0-9]+&quot;)</errorConditionFormula>
    <errorDisplayField>Preferred_Mobile_No__c</errorDisplayField>
    <errorMessage>Preferred Mobile No. should be numbers (length 9-10 for local phone)</errorMessage>
</ValidationRule>