force-app/main/default/objects/Account/validationRules/Passport_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_ID</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &#39;Edit_Person_Account&#39;
&amp;&amp; !ISBLANK(Passport_ID__c)
&amp;&amp; !REGEX(Passport_ID__c , &quot;[a-zA-Z0-9]+&quot;)</errorConditionFormula>
    <errorDisplayField>Passport_ID__c</errorDisplayField>
    <errorMessage>Please input only english characters and number only</errorMessage>
</ValidationRule>