force-app/main/default/objects/Account/validationRules/Personal_ID_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>Personal_ID_Card</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &#39;Edit_Person_Account&#39;
&amp;&amp; !ISBLANK(Personal_Identification_Number__c)
&amp;&amp; !REGEX(Personal_Identification_Number__c, &#39;([0-9]{13})&#39;)</errorConditionFormula>
    <errorDisplayField>Personal_Identification_Number__c</errorDisplayField>
    <errorMessage>Must be number format and length 13</errorMessage>
</ValidationRule>